<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/card_main_iv_bg"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginStart="@dimen/dua_empat"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="@dimen/dua_empat"
        android:background="@drawable/restoran"
        android:clickable="true"
        android:scaleType="fitEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/card_main_btn_datauser"
        android:layout_width="match_parent"
        android:layout_height="@dimen/delapan_puluh"
        android:layout_marginStart="@dimen/dua_empat"
        android:layout_marginEnd="@dimen/dua_empat"
        android:layout_marginTop="@dimen/tiga_dua"
        android:backgroundTint="@color/button"
        android:text="@string/data_user"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_main_iv_bg" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/card_main_btn_menu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/delapan_puluh"
        android:layout_marginStart="@dimen/dua_empat"
        android:layout_marginEnd="@dimen/dua_empat"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button"
        android:text="@string/data_menu"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_main_btn_datauser" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/card_main_btn_meja"
        android:layout_width="match_parent"
        android:layout_height="@dimen/delapan_puluh"
        android:layout_marginStart="@dimen/dua_empat"
        android:layout_marginEnd="@dimen/dua_empat"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button"
        android:text="@string/data_meja"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_main_btn_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>